GMM_Main/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field checks whether the user account is active.</description>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area1_of_Expertise__c</fullName>
        <label>Area of Expertise</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Area_of_Expertise__c</fullName>
        <label>Area of Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilitator/Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Background_rating__c</fullName>
        <label>Background rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_to_Applicant__c</fullName>
        <label>Comments to Applicant</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CommunityAuto__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>CommunityAuto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currently_Enrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Enrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dataloader_input__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dataloader input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>This field stores the Date of Birth of the user.</description>
        <inlineHelpText>This information is collected for demographic reporting purposes only and is not used to determine your eligibility to become an Expert Reviewer.</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emails__c</fullName>
        <description>This field stores the email id of the user.</description>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Encryptpassword__c</fullName>
        <label>Encryptpassword</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Ethnicity_Type__c</fullName>
        <description>This information is collected for demographic reporting purposes</description>
        <inlineHelpText>This information is collected for demographic reporting purposes only and is not used to determine your eligibility to become an Expert Reviewer.</inlineHelpText>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Hispanic or Latina/o</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Hispanic or Latina/o</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExpertReviewerStatus__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending - SAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expert_Reviewer_Overall_Rating__c</fullName>
        <label>Expert Reviewer Overall Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expert_Reviewer_Performance_Rating__c</fullName>
        <label>Expert Reviewer Performance Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expertise1__c</fullName>
        <label>Expertise</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Collaborated or partnered with one or more service programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed a service program funded by CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed a service program funded by a non-governmental organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed a service program funded by a state or local government agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed a service-learning program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participated in a service or service-learning program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Education &amp; Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After School Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education (Higher Ed.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education (K-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty/teacher professional development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Work Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Start/School Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring &amp; Child Literacy - Elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring &amp; Child Literacy - High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring &amp; Child Literacy - Middle School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Energy Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Restoration/Clean Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Resource Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waste Reduction/Management/Recycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wildlife, Land, Vegetation Protection/Restoration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Reviewer_Comments__c</fullName>
        <label>External Reviewer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>This field stores the first name of the user.</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>This information is collected for demographic reporting purposes</description>
        <inlineHelpText>This information is collected for demographic reporting purposes only and is not used to determine your eligibility to become an Expert Reviewer.</inlineHelpText>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grantee_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Grantee Admin</value>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grantee_Recruitment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox for Grantee Recruitment permission set</description>
        <label>Grantee Recruitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grantee_Travel_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox for Grantee Travel Profile permission set</description>
        <label>Grantee Travel Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grantee_W_O_budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox for Grantee (without budget privileges)</description>
        <label>Grantee - W/O budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grantee_With_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grantee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox for Grantee permission set</description>
        <label>Grantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highest__c</fullName>
        <description>This field pulls the highest level of education value from history object.</description>
        <label>Highest Level of Education</label>
        <picklist>
            <picklistValues>
                <fullName>Less Than High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Diploma/GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical School/Apprenticeship/Vocational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associates Degree (AA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Degree (e.g. MA, PhD, MD, JD)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_CNCS_Reviews__c</fullName>
        <inlineHelpText>This information is collected for reporting purposes only and is not used to determine your eligibility to become an Expert Reviewer.</inlineHelpText>
        <label>How did you hear about CNCS Reviews?</label>
        <picklist>
            <picklistValues>
                <fullName>Email/recruitment flyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Listserv or Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended by friend or colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNCS Website (NationalService.gov)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Yes_describe_what_is_needed__c</fullName>
        <inlineHelpText>The information entered has no impact on selection or eligibility for participation in a Review, and is used for the sole purpose of providing reasonable accommodation to all participants.</inlineHelpText>
        <label>If Yes, describe what is needed.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Mobile_Number__c</fullName>
        <description>The user must be able to identify if the phone number is a mobile phone number</description>
        <label>Is this a Mobile Number</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>This field stores last name of the user.</description>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Person_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy PerId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <description>This field stores mailing city of the user.</description>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <description>This field stores mailing state of the user</description>
        <label>Mailing State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Address_1__c</fullName>
        <description>This field stores the mailing address of the user.</description>
        <label>Mailing Street Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Address_2__c</fullName>
        <description>This field stores the mailing address of the user</description>
        <label>Mailing Street Address 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Code__c</fullName>
        <description>This field stores the zip code of the user</description>
        <label>Mailing Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>This field stores the middle name of the user.</description>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Password__c</fullName>
        <inlineHelpText>Please enter a valid password. The should contain atleaset 1 Special Character.</inlineHelpText>
        <label>New Password</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Organization_Affiliation__c</fullName>
        <label>Organization Affiliation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <description>This field stores the account ID or organization ID which is pulled from organization object.</description>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <description>This field stores the organization name or account name and is pulled from the organization name on the organization object</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overnight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overnight?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Panel_Coordinator_Overall_Rating__c</fullName>
        <label>Panel Coordinator Overall Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Coordinator_Performance_Rating__c</fullName>
        <label>Panel Coordinator Performance Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Rating_Validation__c</fullName>
        <label>Performance Rating Validation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance_Rating__c</fullName>
        <label>Performance Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Please_Specify__c</fullName>
        <description>This field is required if &quot;other&quot;  is selected in the &quot;How did you hear about the CNCS Reviews&quot;.</description>
        <inlineHelpText>If &quot;Other&quot; is selected, Please specify</inlineHelpText>
        <label>Please Specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefix1__c</fullName>
        <label>Prefix</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Select a prefix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Race_Type__c</fullName>
        <inlineHelpText>This information is collected for demographic reporting purposes only and is not used to determine your eligibility to become an Expert Reviewer.</inlineHelpText>
        <label>Race</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian or Alaska Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or Black American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Re_Enter_Email__c</fullName>
        <label>Re-Enter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Re_Enter_Password__c</fullName>
        <label>Re-Enter Password</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Reasonable_Accommodations_Required__c</fullName>
        <inlineHelpText>Please select “Yes” if you require special accommodation, either to use the system or to work as an Expert Reviewer.</inlineHelpText>
        <label>Reasonable Accommodations Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>State_and_National_Grantee_Member_Manage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox for State and National Grantee Member Management permission set</description>
        <label>State and National Grantee Member Manage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_of_Residence__c</fullName>
        <label>State of Residence</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field stores the status of the epert reviewer application</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending - SAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_date__c</fullName>
        <label>Submitted date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summer_of_Service_Grantee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox for Summer of Service Grantee permission set</description>
        <label>Summer of Service Grantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>TitleNonStandard</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Years_of_Experience1__c</fullName>
        <formula>Total_Years_of_Experience__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Years of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>